# trailquest

./: .env  .gitignore  CLAUDE.md  LICENSE  PRD.md  README.md
backend/: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  drafts.py  health.py  pois.py  routes.py  trails.py
backend/app/cache/: __init__.py  store.py
backend/app/clients/: __init__.py  nominatim.py  osrm.py  overpass.py  wikidata.py  wikipedia.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  answer_service.py  content_service.py  draft_service.py  gamification_service.py  grounding_service.py  poi_service.py  route_service.py
backend/app/services/llm/: __init__.py  provider.py
backend/tests/: conftest.py  test_answer_in_stop.py  test_answer_service.py  test_author_content.py  test_build_questions.py  test_clients.py  test_content_store.py  test_custom_stop.py  test_desired_stops.py  test_draft_hydration.py  test_draft_schemas.py  test_draft_service.py  test_draft_stop_content.py  test_draft_store.py  test_drafts_api.py  test_dutch_content.py  test_grounding_service.py  test_llm_provider.py  test_measure_loop.py  test_models.py  test_multi_question_model.py  test_pois_routes_api.py  test_publish_api.py  test_publish_trail.py  test_rephrase_tone.py  test_route_service.py  test_stop_content_api.py  test_stop_identity_schemas.py  test_stop_store.py  test_trails_api.py  test_validate.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  (+3 more)
(+136 files in other folders)
